--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,9 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+#
+Y/
+pspnet_r50-d8_4xb2-40k_cityscapes-512x1024.py
+pspnet_r50-d8_512x1024_40k_cityscapes_20200605_003338-2966598c.pth
+
+
