--- a/.gitignore
+++ b/.gitignore
@@ -162,5 +162,7 @@ cython_debug/
 Y/
 pspnet_r50-d8_4xb2-40k_cityscapes-512x1024.py
 pspnet_r50-d8_512x1024_40k_cityscapes_20200605_003338-2966598c.pth
-
+hazy_new/
+gt_new/
+plots/
 
